change video style

--- a/musik.html
+++ b/musik.html
@@ -44,27 +44,96 @@
       <iframe style="border: 0; width: 400px; height: 340px;" src="https://bandcamp.com/EmbeddedPlayer/album=1212026354/size=large/bgcol=333333/linkcol=e99708/artwork=small/transparent=true/" seamless><a href="https://martinzamorano.bandcamp.com/album/from-the-jazzhall-live">From the Jazzhall (Live) by Martin Zamorano</a></iframe>
     </div>
 
-
-    <div class="video-embed">
-      <iframe src="https://www.youtube-nocookie.com/embed/CBdmE6M_myM?rel=0" allowfullscreen loading="lazy"></iframe>
-    </div>
-    <div class="video-embed">
-      <iframe src="https://www.youtube-nocookie.com/embed/wVW6wtoHxEM?rel=0" allowfullscreen loading="lazy"></iframe>
+    <div class="video-grid">
+      <div class="video-item">
+        <h4 class="video-title">El Perro de San Roque</h4>
+        <div class="yt-thumb" data-vid="CBdmE6M_myM">
+          <img src="https://img.youtube.com/vi/CBdmE6M_myM/hqdefault.jpg" alt="" />
+          <div class="yt-thumb-btn">
+            <svg viewBox="0 0 68 48" xmlns="http://www.w3.org/2000/svg">
+              <path d="M66.5 7.7a8.5 8.5 0 0 0-6-6C55.8 0 34 0 34 0S12.2 0 7.5 1.7a8.5 8.5 0 0 0-6 6C0 12.4 0 24 0 24s0 11.6 1.5 16.3a8.5 8.5 0 0 0 6 6C12.2 48 34 48 34 48s21.8 0 26.5-1.7a8.5 8.5 0 0 0-6-6C68 35.6 68 24 68 24s0-11.6-1.5-16.3z" fill="#888"/>
+              <path d="M27 34l18-10-18-10v20z" fill="#fff"/>
+            </svg>
+          </div>
+        </div>
+      </div>
+      <div class="video-item">
+        <h4 class="video-title">Canción de Mentiras</h4>
+        <div class="yt-thumb" data-vid="wVW6wtoHxEM">
+          <img src="https://img.youtube.com/vi/wVW6wtoHxEM/hqdefault.jpg" alt="" />
+          <div class="yt-thumb-btn">
+            <svg viewBox="0 0 68 48" xmlns="http://www.w3.org/2000/svg">
+              <path d="M66.5 7.7a8.5 8.5 0 0 0-6-6C55.8 0 34 0 34 0S12.2 0 7.5 1.7a8.5 8.5 0 0 0-6 6C0 12.4 0 24 0 24s0 11.6 1.5 16.3a8.5 8.5 0 0 0 6 6C12.2 48 34 48 34 48s21.8 0 26.5-1.7a8.5 8.5 0 0 0-6-6C68 35.6 68 24 68 24s0-11.6-1.5-16.3z" fill="#888"/>
+              <path d="M27 34l18-10-18-10v20z" fill="#fff"/>
+            </svg>
+          </div>
+        </div>
+      </div>
     </div>
 
     <h3>Klangmanufaktur Sessions (live)</h3>
-    <div class="video-embed">
-      <iframe src="https://www.youtube-nocookie.com/embed/o40blnJaeow?rel=0" allowfullscreen loading="lazy"></iframe>
+    <div class="video-grid">
+      <div class="video-item">
+        <h4 class="video-title">Suite for Keys II: Prelude</h4>
+        <div class="yt-thumb" data-vid="KtF6NXwRAXM">
+          <img src="https://img.youtube.com/vi/KtF6NXwRAXM/hqdefault.jpg" alt="" />
+          <div class="yt-thumb-btn">
+            <svg viewBox="0 0 68 48" xmlns="http://www.w3.org/2000/svg">
+              <path d="M66.5 7.7a8.5 8.5 0 0 0-6-6C55.8 0 34 0 34 0S12.2 0 7.5 1.7a8.5 8.5 0 0 0-6 6C0 12.4 0 24 0 24s0 11.6 1.5 16.3a8.5 8.5 0 0 0 6 6C12.2 48 34 48 34 48s21.8 0 26.5-1.7a8.5 8.5 0 0 0-6-6C68 35.6 68 24 68 24s0-11.6-1.5-16.3z" fill="#888"/>
+              <path d="M27 34l18-10-18-10v20z" fill="#fff"/>
+            </svg>
+          </div>
+        </div>
+      </div>
+      <div class="video-item">
+        <h4 class="video-title">Suite for Keys II: Minimal</h4>
+        <div class="yt-thumb" data-vid="o40blnJaeow">
+          <img src="https://img.youtube.com/vi/o40blnJaeow/hqdefault.jpg" alt="" />
+          <div class="yt-thumb-btn">
+            <svg viewBox="0 0 68 48" xmlns="http://www.w3.org/2000/svg">
+              <path d="M66.5 7.7a8.5 8.5 0 0 0-6-6C55.8 0 34 0 34 0S12.2 0 7.5 1.7a8.5 8.5 0 0 0-6 6C0 12.4 0 24 0 24s0 11.6 1.5 16.3a8.5 8.5 0 0 0 6 6C12.2 48 34 48 34 48s21.8 0 26.5-1.7a8.5 8.5 0 0 0-6-6C68 35.6 68 24 68 24s0-11.6-1.5-16.3z" fill="#888"/>
+              <path d="M27 34l18-10-18-10v20z" fill="#fff"/>
+            </svg>
+          </div>
+        </div>
+      </div>
+      
     </div>
-    <div class="video-embed">
-      <iframe src="https://www.youtube-nocookie.com/embed/KtF6NXwRAXM?rel=0" allowfullscreen loading="lazy"></iframe>
+    <div class="video-grid">
+      <div class="video-item">
+        <h4 class="video-title">Nocturne I (Watered Ivy)</h4>
+        <div class="yt-thumb" data-vid="_aA9-7tpLVs">
+          <img src="https://img.youtube.com/vi/_aA9-7tpLVs/hqdefault.jpg" alt="" />
+          <div class="yt-thumb-btn">
+            <svg viewBox="0 0 68 48" xmlns="http://www.w3.org/2000/svg">
+              <path d="M66.5 7.7a8.5 8.5 0 0 0-6-6C55.8 0 34 0 34 0S12.2 0 7.5 1.7a8.5 8.5 0 0 0-6 6C0 12.4 0 24 0 24s0 11.6 1.5 16.3a8.5 8.5 0 0 0 6 6C12.2 48 34 48 34 48s21.8 0 26.5-1.7a8.5 8.5 0 0 0-6-6C68 35.6 68 24 68 24s0-11.6-1.5-16.3z" fill="#888"/>
+              <path d="M27 34l18-10-18-10v20z" fill="#fff"/>
+            </svg>
+          </div>
+        </div>
+      </div>
+      <div class="video-item">
+        <h4 class="video-title">Nocturne II (Withering Ivy)</h4>
+        <div class="yt-thumb" data-vid="vsqKqSA6ZnU">
+          <img src="https://img.youtube.com/vi/vsqKqSA6ZnU/hqdefault.jpg" alt="" />
+          <div class="yt-thumb-btn">
+            <svg viewBox="0 0 68 48" xmlns="http://www.w3.org/2000/svg">
+              <path d="M66.5 7.7a8.5 8.5 0 0 0-6-6C55.8 0 34 0 34 0S12.2 0 7.5 1.7a8.5 8.5 0 0 0-6 6C0 12.4 0 24 0 24s0 11.6 1.5 16.3a8.5 8.5 0 0 0 6 6C12.2 48 34 48 34 48s21.8 0 26.5-1.7a8.5 8.5 0 0 0-6-6C68 35.6 68 24 68 24s0-11.6-1.5-16.3z" fill="#888"/>
+              <path d="M27 34l18-10-18-10v20z" fill="#fff"/>
+            </svg>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="video-embed">
-      <iframe src="https://www.youtube-nocookie.com/embed/vsqKqSA6ZnU?rel=0" allowfullscreen loading="lazy"></iframe>
-    </div>
-    <div class="video-embed">
-      <iframe src="https://www.youtube-nocookie.com/embed/_aA9-7tpLVs?rel=0" allowfullscreen loading="lazy"></iframe>
-    </div>
+
+    <script>
+      document.querySelectorAll('.yt-thumb').forEach(function(el) {
+        el.addEventListener('click', function() {
+          var vid = el.dataset.vid;
+          el.innerHTML = '<iframe src="https://www.youtube-nocookie.com/embed/' + vid + '?autoplay=1&rel=0" allow="autoplay; encrypted-media" allowfullscreen></iframe>';
+        });
+      });
+    </script>
 
     <h3>Two Suites for Keys</h3>
     <div class="bandcamp-embed">
