--- a/shows.html
+++ b/shows.html
@@ -47,6 +47,12 @@
           <td class="show-project">RE:PUBLIC mit der Hamburger Kammerballett (with Danica Hobden, Dirk Achim Dhonau, Carmen Kleykens Vidal)</td>
         </tr>
         <tr>
+            <td class="show-date">29.03.2026</td>
+            <td class="show-venue"><a href="https://schauspielhaus.de/stuecke/vampires-mountain" target="_blank" rel="noopener">Deutsches Schauspielhaus</a></td>
+            <td class="show-city">Hamburg</td>
+            <td class="show-project">Vampire's Mountain (with Jean-Charles Dumay, Sachiko Hara, Sébastien Jacobs, Sasha Rau, Bettina Stucky, Samuel Weiss, Philippe Quesne)</td>
+        </tr>   
+        <tr>
           <td class="show-date">09.05.2026</td>
           <td class="show-venue"><a href="https://kampnagel.de/produktionen/kammerballett" target="_blank" rel="noopener">Kampnagel</a></td>
           <td class="show-city">Hamburg</td>
@@ -65,7 +71,12 @@
     <h2>2025 — Archiv</h2>
     <table class="shows-table shows-table--past">
       <tbody>
-
+        <tr>
+            <td class="show-date">22.10.2025</td>
+            <td class="show-venue"><a href="https://www.tonali.de/termine/jazzwerk-silent/" target="_blank" rel="noopener">Tonali Saal</a></td>
+            <td class="show-city">Hamburg</td>
+            <td class="show-project">JazzWerk Silent (with Vlatco Kučan & Finn Stamer)</td>
+        </tr>
       </tbody>
     </table>
   </main>
