--- a/improvisation.html
+++ b/improvisation.html
@@ -28,16 +28,41 @@
       <source src="assets/audio/Mad_World_Mix_14._Juli_2025.mp3" type="audio/mpeg" />
       <span data-i18n="site.no_audio">Ihr Browser unterstützt kein Audio-Element.</span>
     </audio>
-
-    <h2>Improvisation No. 1</h2>
-    <div class="video-embed">
-      <iframe src="https://www.youtube-nocookie.com/embed/cO6l2FYlb4Q?rel=0" allowfullscreen loading="lazy"></iframe>
+    <h2>Improvisations - From the Jazzhall</h2>
+    <div class="video-grid">
+      <div class="video-item">
+        <h4 class="video-title">Improvisation No. 1</h4>
+        <div class="yt-thumb" data-vid="cO6l2FYlb4Q">
+          <img src="https://img.youtube.com/vi/cO6l2FYlb4Q/hqdefault.jpg" alt="" />
+          <div class="yt-thumb-btn">
+            <svg viewBox="0 0 68 48" xmlns="http://www.w3.org/2000/svg">
+              <path d="M66.5 7.7a8.5 8.5 0 0 0-6-6C55.8 0 34 0 34 0S12.2 0 7.5 1.7a8.5 8.5 0 0 0-6 6C0 12.4 0 24 0 24s0 11.6 1.5 16.3a8.5 8.5 0 0 0 6 6C12.2 48 34 48 34 48s21.8 0 26.5-1.7a8.5 8.5 0 0 0 6-6C68 35.6 68 24 68 24s0-11.6-1.5-16.3z" fill="#888"/>
+              <path d="M27 34l18-10-18-10v20z" fill="#fff"/>
+            </svg>
+          </div>
+        </div>
+      </div>
+      <div class="video-item">
+        <h4 class="video-title">Improvisation No. 2</h4>
+        <div class="yt-thumb" data-vid="NbCxwmgGpQA">
+          <img src="https://img.youtube.com/vi/NbCxwmgGpQA/hqdefault.jpg" alt="" />
+          <div class="yt-thumb-btn">
+            <svg viewBox="0 0 68 48" xmlns="http://www.w3.org/2000/svg">
+              <path d="M66.5 7.7a8.5 8.5 0 0 0-6-6C55.8 0 34 0 34 0S12.2 0 7.5 1.7a8.5 8.5 0 0 0-6 6C0 12.4 0 24 0 24s0 11.6 1.5 16.3a8.5 8.5 0 0 0 6 6C12.2 48 34 48 34 48s21.8 0 26.5-1.7a8.5 8.5 0 0 0 6-6C68 35.6 68 24 68 24s0-11.6-1.5-16.3z" fill="#888"/>
+              <path d="M27 34l18-10-18-10v20z" fill="#fff"/>
+            </svg>
+          </div>
+        </div>
+      </div>
     </div>
-
-    <h2>Improvisation No. 2</h2>
-    <div class="video-embed">
-      <iframe src="https://www.youtube-nocookie.com/embed/NbCxwmgGpQA?rel=0" allowfullscreen loading="lazy"></iframe>
-    </div>
+    <script>
+      document.querySelectorAll('.yt-thumb').forEach(function(el) {
+        el.addEventListener('click', function() {
+          var vid = el.dataset.vid;
+          el.innerHTML = '<iframe src="https://www.youtube-nocookie.com/embed/' + vid + '?autoplay=1&rel=0" allow="autoplay; encrypted-media" allowfullscreen></iframe>';
+        });
+      });
+    </script>
   </main>
 
   <footer>
