fix shows section & android bugfix

--- a/index.html
+++ b/index.html
@@ -88,71 +88,46 @@
   <script src="assets/i18n/de.js"></script>
   <script src="assets/i18n/en.js"></script>
   <script src="assets/i18n/es.js"></script>
+  <script src="assets/shows-data.js"></script>
   <script src="assets/nav.js"></script>
   <script>
-    // Fetch shows.html, parse upcoming rows, render the next 3
     (function() {
       var today = new Date();
       today.setHours(0,0,0,0);
 
-      fetch('shows.html')
-        .then(function(r) { return r.text(); })
-        .then(function(html) {
-          var parser = new DOMParser();
-          var doc = parser.parseFromString(html, 'text/html');
+      function parseDate(str) {
+        var p = str.split('.');
+        return new Date(+p[2], +p[1] - 1, +p[0]);
+      }
 
-          // Collect all rows from non-past tables
-          var upcoming = [];
-          doc.querySelectorAll('.shows-table:not(.shows-table--past) tbody tr').forEach(function(row) {
-            var dateCell  = row.querySelector('.show-date');
-            var venueCell = row.querySelector('.show-venue');
-            var cityCell  = row.querySelector('.show-city');
-            var projCell  = row.querySelector('.show-project');
-            if (!dateCell) return;
+      var activeLang = (function(){ try { return localStorage.getItem('mz_lang') || 'de'; } catch(e){ return 'de'; } })();
+      var dicts = { de: window.I18N_DE, en: window.I18N_EN, es: window.I18N_ES };
+      var d = dicts[activeLang] || window.I18N_DE;
 
-            // Parse DD.MM.YYYY
-            var parts = dateCell.textContent.trim().split('.');
-            if (parts.length < 3) return;
-            var d = new Date(+parts[2], +parts[1] - 1, +parts[0]);
-            if (d < today) return;
+      var upcoming = (window.SHOWS_DATA || []).filter(function(s) {
+        return parseDate(s.date) >= today;
+      });
+      upcoming.sort(function(a, b) { return parseDate(a.date) - parseDate(b.date); });
+      var next3 = upcoming.slice(0, 3);
 
-            upcoming.push({
-              date:    dateCell.textContent.trim(),
-              venue:   venueCell ? venueCell.innerHTML.trim() : '',
-              city:    cityCell  ? cityCell.textContent.trim()  : '',
-              project: projCell  ? projCell.textContent.trim()  : '',
-              dateObj: d
-            });
-          });
+      var container = document.getElementById('home-shows-list');
+      if (next3.length === 0) {
+        container.innerHTML = '<p class="home-shows-empty">' + (d['home.shows.empty'] || 'Keine bevorstehenden Shows.') + '</p>';
+        return;
+      }
 
-          // Sort ascending, take first 3
-          upcoming.sort(function(a,b){ return a.dateObj - b.dateObj; });
-          var next3 = upcoming.slice(0, 3);
-
-          var container = document.getElementById('home-shows-list');
-          if (next3.length === 0) {
-            var emptyMsg = (window.I18N_DE && window.I18N_DE['home.shows.empty']) ? '' : '';
-            // Use the active language via nav.js's t() — but that's scoped, so read from the active dict directly
-            var activeLang = (function(){ try { return localStorage.getItem('mz_lang') || 'de'; } catch(e){ return 'de'; } })();
-            var dicts = { de: window.I18N_DE, en: window.I18N_EN, es: window.I18N_ES };
-            var d = dicts[activeLang] || window.I18N_DE;
-            container.innerHTML = '<p class="home-shows-empty">' + (d['home.shows.empty'] || 'Keine bevorstehenden Shows.') + '</p>';
-            return;
-          }
-
-          var rows = next3.map(function(s) {
-            return '<div class="home-show-row">'
-              + '<span class="home-show-date">' + s.date + '</span>'
-              + '<span class="home-show-venue">' + s.venue + '</span>'
-              + '<span class="home-show-city">'  + s.city  + '</span>'
-              + '<span class="home-show-project">' + s.project + '</span>'
-              + '</div>';
-          });
-          container.innerHTML = rows.join('');
-        })
-        .catch(function() {
-          document.getElementById('home-shows-list').innerHTML = '';
-        });
+      var rows = next3.map(function(s) {
+        var venueHTML = s.url
+          ? '<a href="' + s.url + '" target="_blank" rel="noopener">' + s.venue + '</a>'
+          : s.venue;
+        return '<div class="home-show-row">'
+          + '<span class="home-show-date">'    + s.date       + '</span>'
+          + '<span class="home-show-venue">'   + venueHTML    + '</span>'
+          + '<span class="home-show-city">'    + s.city       + '</span>'
+          + '<span class="home-show-project">' + s.project    + '</span>'
+          + '</div>';
+      });
+      container.innerHTML = rows.join('');
     })();
   </script>
 </body>
