--- a/shows.html
+++ b/shows.html
@@ -23,62 +23,9 @@
   <header></header>
 
   <main class="page-content">
-    <h1 data-i18n="nav.shows">SHOWS</h1>
-
-    <h2>2026</h2>
-    <table class="shows-table">
-      <tbody>
-        <tr>
-          <td class="show-date">20.02.2026</td>
-          <td class="show-venue"><a href="https://kampnagel.de/produktionen/kammerballett" target="_blank" rel="noopener">Kampnagel</a></td>
-          <td class="show-city">Hamburg</td>
-          <td class="show-project">RE:PUBLIC mit der Hamburger Kammerballett (with Danica Hobden, Dirk Achim Dhonau, Carmen Kleykens Vidal)</td>
-        </tr>
-        <tr>
-          <td class="show-date">21.02.2026</td>
-          <td class="show-venue"><a href="https://kampnagel.de/produktionen/kammerballett" target="_blank" rel="noopener">Kampnagel</a></td>
-          <td class="show-city">Hamburg</td>
-          <td class="show-project">RE:PUBLIC mit der Hamburger Kammerballett (with Danica Hobden, Dirk Achim Dhonau, Carmen Kleykens Vidal)</td>
-        </tr>
-        <tr>
-          <td class="show-date">22.02.2026</td>
-          <td class="show-venue"><a href="https://kampnagel.de/produktionen/kammerballett" target="_blank" rel="noopener">Kampnagel</a></td>
-          <td class="show-city">Hamburg</td>
-          <td class="show-project">RE:PUBLIC mit der Hamburger Kammerballett (with Danica Hobden, Dirk Achim Dhonau, Carmen Kleykens Vidal)</td>
-        </tr>
-        <tr>
-            <td class="show-date">29.03.2026</td>
-            <td class="show-venue"><a href="https://schauspielhaus.de/stuecke/vampires-mountain" target="_blank" rel="noopener">Deutsches Schauspielhaus</a></td>
-            <td class="show-city">Hamburg</td>
-            <td class="show-project">Vampire's Mountain (with Jean-Charles Dumay, Sachiko Hara, Sébastien Jacobs, Sasha Rau, Bettina Stucky, Samuel Weiss, Philippe Quesne)</td>
-        </tr>   
-        <tr>
-          <td class="show-date">09.05.2026</td>
-          <td class="show-venue"><a href="https://kampnagel.de/produktionen/kammerballett" target="_blank" rel="noopener">Kampnagel</a></td>
-          <td class="show-city">Hamburg</td>
-          <td class="show-project">RE:PUBLIC mit der Hamburger Kammerballett (with Danica Hobden, Dirk Achim Dhonau, Carmen Kleykens Vidal)</td>
-        </tr>
-        <tr>
-          <td class="show-date">10.05.2026</td>
-          <td class="show-venue"><a href="https://kampnagel.de/produktionen/kammerballett" target="_blank" rel="noopener">Kampnagel</a></td>
-          <td class="show-city">Hamburg</td>
-          <td class="show-project">RE:PUBLIC mit der Hamburger Kammerballett (with Danica Hobden, Dirk Achim Dhonau, Carmen Kleykens Vidal)</td>
-        </tr>
-
-      </tbody>
-    </table>
-
-    <h2>2025 — Archiv</h2>
-    <table class="shows-table shows-table--past">
-      <tbody>
-        <tr>
-            <td class="show-date">22.10.2025</td>
-            <td class="show-venue"><a href="https://www.tonali.de/termine/jazzwerk-silent/" target="_blank" rel="noopener">Tonali Saal</a></td>
-            <td class="show-city">Hamburg</td>
-            <td class="show-project">JazzWerk Silent (with Vlatco Kučan & Finn Stamer)</td>
-        </tr>
-      </tbody>
-    </table>
+    <h1 data-i18n="shows.upcoming">Upcoming Shows</h1>
+    <div id="shows-upcoming"></div>
+    <div id="shows-past"></div>
   </main>
 
   <footer>
@@ -92,6 +39,64 @@
   <script src="assets/i18n/de.js"></script>
   <script src="assets/i18n/en.js"></script>
   <script src="assets/i18n/es.js"></script>
+  <script src="assets/shows-data.js"></script>
   <script src="assets/nav.js"></script>
+  <script>
+    (function () {
+      function parseDate(str) {
+        var p = str.split('.');
+        return new Date(+p[2], +p[1] - 1, +p[0]);
+      }
+
+      function venueHTML(show) {
+        return show.url
+          ? '<a href="' + show.url + '" target="_blank" rel="noopener">' + show.venue + '</a>'
+          : show.venue;
+      }
+
+      function buildTable(shows, past) {
+        var rows = shows.map(function (s) {
+          return '<tr>'
+            + '<td class="show-date">'    + s.date              + '</td>'
+            + '<td class="show-venue">'   + venueHTML(s)        + '</td>'
+            + '<td class="show-city">'    + s.city              + '</td>'
+            + '<td class="show-project">' + s.project           + '</td>'
+            + '</tr>';
+        }).join('');
+        return '<table class="shows-table' + (past ? ' shows-table--past' : '') + '">'
+          + '<tbody>' + rows + '</tbody></table>';
+      }
+
+      var today = new Date();
+      today.setHours(0, 0, 0, 0);
+
+      var activeLang = (function () {
+        try { return localStorage.getItem('mz_lang') || 'de'; } catch (e) { return 'de'; }
+      })();
+      var dicts = { de: window.I18N_DE, en: window.I18N_EN, es: window.I18N_ES };
+      var d = dicts[activeLang] || window.I18N_DE;
+
+      var upcoming = [], past = [];
+      (window.SHOWS_DATA || []).forEach(function (s) {
+        (parseDate(s.date) >= today ? upcoming : past).push(s);
+      });
+
+      upcoming.sort(function (a, b) { return parseDate(a.date) - parseDate(b.date); });
+      past.sort(function (a, b) { return parseDate(b.date) - parseDate(a.date); });
+
+      var upcomingEl = document.getElementById('shows-upcoming');
+      var pastEl     = document.getElementById('shows-past');
+
+      if (upcoming.length) {
+        upcomingEl.innerHTML =  buildTable(upcoming, false);
+      } else {
+        upcomingEl.innerHTML = '<p class="home-shows-empty">' + (d['home.shows.empty'] || 'Keine bevorstehenden Shows.') + '</p>';
+      }
+
+      if (past.length) {
+        pastEl.innerHTML = '<h2>' + (d['shows.past'] || 'Past Shows') + '</h2>' + buildTable(past, true);
+      }
+    })();
+  </script>
 </body>
 </html>
