--- a/index.html
+++ b/index.html
@@ -2,133 +2,10 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="refresh" content="0; url=90s_overlay/index.html" />
   <title>Martín Zamorano</title>
-  <meta name="description" content="Pianist, Komponist & Musikpädagoge — Hamburg" />
-  <link rel="stylesheet" href="assets/style.css" />
-  <style>
-    body {
-      background-image: url('assets/images/bg_home.jpg');
-      background-size: cover;
-      background-attachment: fixed;
-      background-position: center top;
-      background-repeat: no-repeat;
-    }
-    body::before {
-      content: '';
-      position: fixed;
-      inset: 0;
-      background: rgba(11,11,11,.6);
-      z-index: 0;
-      pointer-events: none;
-    }
-    header { position: relative; z-index: 100; }
-    main.page-content, footer { position: relative; z-index: 1; }
-  </style>
 </head>
 <body>
-
-  <header></header>
-
-  <main class="page-content">
-    <div class="home-hero">
-      <h1 data-i18n="home.h1">Moin, moin!</h1>
-      <p data-i18n="home.welcome">Willkommen auf der Homepage von Martín Zamorano</p>
-      <p class="tagline" data-i18n="home.tagline">Komponist &amp; Pianist — Hamburg</p>
-      <div class="home-links">
-        <a href="https://martinzamorano.bandcamp.com/" target="_blank" rel="noopener" aria-label="Bandcamp">
-          <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M0 18.75l7.437-13.5H24l-7.438 13.5z"/></svg>
-        </a>
-        <a href="https://www.instagram.com/martinzamoranomusic/" target="_blank" rel="noopener" aria-label="Instagram">
-          <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 1.366.062 2.633.334 3.608 1.308.975.975 1.246 2.242 1.308 3.608.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.062 1.366-.334 2.633-1.308 3.608-.975.975-2.242 1.246-3.608 1.308-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.366-.062-2.633-.334-3.608-1.308-.975-.975-1.246-2.242-1.308-3.608C2.175 15.584 2.163 15.204 2.163 12s.012-3.584.07-4.85c.062-1.366.334-2.633 1.308-3.608.975-.975 2.242-1.246 3.608-1.308C8.416 2.175 8.796 2.163 12 2.163zm0-2.163C8.741 0 8.332.014 7.052.072 5.197.157 3.355.673 2.014 2.014.673 3.355.157 5.197.072 7.052.014 8.332 0 8.741 0 12c0 3.259.014 3.668.072 4.948.085 1.855.601 3.697 1.942 5.038 1.341 1.341 3.183 1.857 5.038 1.942C8.332 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 1.855-.085 3.697-.601 5.038-1.942 1.341-1.341 1.857-3.183 1.942-5.038.058-1.28.072-1.689.072-4.948 0-3.259-.014-3.668-.072-4.948-.085-1.855-.601-3.697-1.942-5.038C20.645.673 18.803.157 16.948.072 15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 1 0 0 12.324 6.162 6.162 0 0 0 0-12.324zm0 10.162a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm6.406-11.845a1.44 1.44 0 1 0 0 2.881 1.44 1.44 0 0 0 0-2.881z"/></svg>
-        </a>
-        <a href="https://www.facebook.com/martinzamoranomusic" target="_blank" rel="noopener" aria-label="Facebook">
-          <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M24 12.073C24 5.405 18.627 0 12 0S0 5.405 0 12.073C0 18.1 4.388 23.094 10.125 24v-8.437H7.078v-3.49h3.047V9.413c0-3.025 1.791-4.697 4.533-4.697 1.312 0 2.686.236 2.686.236v2.97h-1.513c-1.491 0-1.956.93-1.956 1.886v2.265h3.328l-.532 3.49h-2.796V24C19.612 23.094 24 18.1 24 12.073z"/></svg>
-        </a>
-        <a href="https://open.spotify.com/artist/1N9ltuIHjJ0w8lKa0Yadxr?si=qfPEa4ZeQFODFzyy8X9ETw" target="_blank" rel="noopener" aria-label="Spotify">
-          <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm5.516 17.313c-.215.354-.674.463-1.025.248-2.808-1.716-6.341-2.104-10.504-1.152-.4.092-.8-.155-.892-.554-.092-.4.154-.8.553-.892 4.555-1.04 8.458-.593 11.618 1.325.352.215.461.674.25 1.025zm1.47-3.267c-.27.44-.845.578-1.284.308-3.213-1.975-8.113-2.547-11.913-1.394-.493.15-1.014-.13-1.163-.622-.148-.493.13-1.014.622-1.163 4.344-1.318 9.742-.68 13.43 1.587.44.27.578.845.308 1.284zm.127-3.402C15.31 8.39 9.393 8.188 5.893 9.29c-.592.18-1.218-.155-1.397-.747-.18-.592.155-1.218.747-1.397 4.043-1.226 10.77-.99 15.018 1.58.535.317.713 1.006.397 1.542-.316.535-1.006.713-1.542.397z"/></svg>
-        </a>
-        <a href="https://www.youtube.com/@martinzamoranomusic" target="_blank" rel="noopener" aria-label="YouTube">
-          <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/></svg>
-        </a>
-      </div>
-    </div>
-
-    <section class="home-album">
-      <p class="home-album-eyebrow" data-i18n="home.album.eyebrow">Jetzt verfügbar</p>
-      <div class="home-album-inner">
-        <a class="home-album-cover" href="https://martinzamorano.bandcamp.com/album/pre-apocalyptic-anti-cynical-post-postmodernist-piano-jukebox" target="_blank" rel="noopener">
-          <img src="assets/images/a3363914671_10.jpg" alt="Pre-Apocalyptic Anti-Cynical Post-Postmodernist Piano Jukebox" />
-        </a>
-        <div class="home-album-info">
-          <h2 class="home-album-title">Pre-Apocalyptic Anti-Cynical Post-Postmodernist Piano Jukebox</h2>
-          <p class="home-album-desc" data-i18n="home.album.desc">Das neue Album von Martín Zamorano — jetzt auf Bandcamp zum Streamen und Download.</p>
-          <a class="home-album-cta" href="https://martinzamorano.bandcamp.com/album/pre-apocalyptic-anti-cynical-post-postmodernist-piano-jukebox" target="_blank" rel="noopener" data-i18n="home.album.cta">Auf Bandcamp anhören →</a>
-        </div>
-      </div>
-    </section>
-
-    <section class="home-shows">
-      <h2 data-i18n="home.shows.title">Nächste Shows</h2>
-      <div id="home-shows-list">
-        <p class="home-shows-loading">…</p>
-      </div>
-      <a href="shows.html" class="home-shows-more" data-i18n="home.shows.more">Alle Shows →</a>
-    </section>
-  </main>
-
-  <footer>
-    <nav class="footer-nav">
-      <a href="impressum.html">Impressum</a>
-      <a href="datenschutz.html">Datenschutz</a>
-    </nav>
-    <p class="footer-copy" data-i18n="site.footer.copy">&copy; 2026 Martín Zamorano</p>
-  </footer>
-
-  <script src="assets/i18n/de.js"></script>
-  <script src="assets/i18n/en.js"></script>
-  <script src="assets/i18n/es.js"></script>
-  <script src="assets/shows-data.js"></script>
-  <script src="assets/nav.js"></script>
-  <script>
-    (function() {
-      var today = new Date();
-      today.setHours(0,0,0,0);
-
-      function parseDate(str) {
-        var p = str.split('.');
-        return new Date(+p[2], +p[1] - 1, +p[0]);
-      }
-
-      var activeLang = (function(){ try { return localStorage.getItem('mz_lang') || 'de'; } catch(e){ return 'de'; } })();
-      var dicts = { de: window.I18N_DE, en: window.I18N_EN, es: window.I18N_ES };
-      var d = dicts[activeLang] || window.I18N_DE;
-
-      var upcoming = (window.SHOWS_DATA || []).filter(function(s) {
-        return parseDate(s.date) >= today;
-      });
-      upcoming.sort(function(a, b) { return parseDate(a.date) - parseDate(b.date); });
-      var next3 = upcoming.slice(0, 3);
-
-      var container = document.getElementById('home-shows-list');
-      if (next3.length === 0) {
-        container.innerHTML = '<p class="home-shows-empty">' + (d['home.shows.empty'] || 'Keine bevorstehenden Shows.') + '</p>';
-        return;
-      }
-
-      var rows = next3.map(function(s) {
-        var venueHTML = s.url
-          ? '<a href="' + s.url + '" target="_blank" rel="noopener">' + s.venue + '</a>'
-          : s.venue;
-        return '<div class="home-show-row">'
-          + '<span class="home-show-date">'    + s.date       + '</span>'
-          + '<span class="home-show-venue">'   + venueHTML    + '</span>'
-          + '<span class="home-show-city">'    + s.city       + '</span>'
-          + '<span class="home-show-project">' + s.project    + '</span>'
-          + '</div>';
-      });
-      container.innerHTML = rows.join('');
-    })();
-  </script>
+  <p>Weiterleitung… <a href="90s_overlay/index.html">Hier klicken</a></p>
 </body>
 </html>
